--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -225,7 +225,7 @@
             <button class="modify-button" onclick="toggleForm()">Modify Information</button>
             <div class="menu-order-buttons">
                 <a href="{{ url_for('make_menu') }}">Menu</a>
-                <a href="{{ url_for('order_history') }}">Order</a>
+                <a href="{{ url_for('partner_orders') }}">Order</a>
             </div>
         </div>
         <div class="form-container">
